minor formatting changes; tidying up a bit in the code