@@ -36,7 +36,7 @@ public class FileUserDataAccessObject implements SignupUserDataAccessInterface, 
             try (BufferedReader reader = new BufferedReader(new FileReader(csvFile))) {
                 String header = reader.readLine();
 
-                // TODO clean this up by creating a new Exception subclass and handling it in the UI.
+                // For later: clean this up by creating a new Exception subclass and handling it in the UI.
                 assert header.equals("username,password,creation_time");
 
                 String row;
@@ -72,7 +72,7 @@ public class FileUserDataAccessObject implements SignupUserDataAccessInterface, 
             writer.newLine();
 
             for (User user : accounts.values()) {
-                String line = "%s,%s,%s".formatted(
+                String line = String.format("%s,%s,%s",
                         user.getName(), user.getPassword(), user.getCreationTime());
                 writer.write(line);
                 writer.newLine();
